[FIX] design.css: move button element out of definitions for button links (it is not wrapped element but rather a wrapper element itself like span.button), remove margin-right definition from "button" links causing 1px gap on the right side (was visible on highlighted "button" links)
git-svn-id: https://svn.code.sf.net/p/tikiwiki/code/trunk@21679 b456876b-0849-0410-b77d-98878d47e9d5

--- a/styles/layout/design-reference.css
+++ b/styles/layout/design-reference.css
@@ -18,18 +18,17 @@ fieldset {
 	padding: 0.3em;
 }
 
-span.button {
+/* margin and padding for span surrounding the "button" links, same definition for button form element */
+span.button, button {
 	margin: 1px 2px;
 	padding: 2px;
 }
 
 span.button a,
 span.button a:visited,
-button,
 span.button input,
 .calbuttonBox a {
 	padding: 1px 4px;
-	margin-right: 1px;
 }
 
 input[type=reset],
